attempted fix to overflow

--- a/src/global.css
+++ b/src/global.css
@@ -20,6 +20,7 @@ body {
   font-weight: 500;
   background-color: var(--color-background);
   color: var(--color-text);
+  overflow-x: hidden;
 }
 
 h1,
